/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.0/samples
 */

plugins {
    id 'java'
    id 'com.github.ben-manes.versions' version '0.39.0'
    id 'application'
    id 'checkstyle'
}


group = 'hexlet.code'
version = '1.0-SNAPSHOT'

application {
    mainClass = 'hexlet.code.App'
}

compileJava {
    options.release = 16
}

repositories {
    mavenCentral()
}
run {
    standardInput = System.in
}

dependencies {
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
    testImplementation 'org.assertj:assertj-core:3.21.0'

    implementation 'info.picocli:picocli:4.6.1'
    implementation 'com.github.lbovolini:ObjectMapper:0.2.3'
    annotationProcessor 'info.picocli:picocli-codegen:4.6.1'

    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.0'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.0'
}



test {
    useJUnitPlatform()
}

sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16
